# aws-sample-application-franka

./: roboMakerSettings.json  scenarios.json
simulation_ws/src/franka_simulation_app/: CMakeLists.txt  package.xml
simulation_ws/src/franka_simulation_app/launch/: start.launch
